--- a/Lab-Compile/alternativeassessment_crampatanta.html
+++ b/Lab-Compile/alternativeassessment_crampatanta.html
@@ -6,7 +6,7 @@
 		</head>
 		<body>
 			<h1> 1st Quarter Laboratory Exercises </h1>
-			<span class = "square">
+			<span>
 				<ul>
 					<li> <a href="mod2-1_crampatanta.html"> Laboratory Exercise 1 </a> </li>
 					<li> <a href="mod2-2_crampatanta.html"> Laboratory Exercise  2</a> </li>
